# langchain_project

./: .cursorrules  DEPLOYMENT_GUIDE.md  PLATFORM_DEPLOYMENT_FINAL.md  PLATFORM_DEPLOYMENT_SUMMARY.md  README.md  RECURSION_ERROR_FIXED.md  demo_salesforce_agent.py  environment_template.txt  langgraph.json  main.py  main_platform_fixed.py  main_platform_ready.py  main_recursion_fixed.py  pyproject.toml  salesforce_mcp_wrapper.py  salesforce_platform_ready.py  test_client.py  test_deployment.py  test_endpoints.sh  test_salesforce_integration.py  test_specific_recursion_scenario.py  verify_recursion_fix.py
test/: README.md  chat_with_deployment.sh  demo_salesforce_agent.py  run_tests.py  test_deployment.sh  test_recursion_fix.py  test_salesforce_integration.py
